# src/api/streams.router.ts
@@ -5,6 +5,7 @@ import streamController from './streams.controller.js';
 export default (context: Context) => {
     let router = express.Router();
     router.get('/', streamController.getStreams.bind(context));
+    router.get('/tree', streamController.getStreamsTree.bind(context));
     router.get('/:app/:stream', streamController.getStream.bind(context));
     router.delete('/:app/:stream', streamController.delStream.bind(context));
     return router;
